@@ -782,7 +782,11 @@ static void req_stat_job_step2(
         }
       else
         {
+        if (pa != NULL)
+          pthread_mutex_unlock(pa->ai_mutex);
         pque = get_jobs_queue(&pjob);
+        if (pa != NULL)
+          pthread_mutex_lock(pa->ai_mutex);
 
         if ((pjob == NULL) ||
             (pque == NULL))
@@ -1002,8 +1006,10 @@ int stat_to_mom(
  */
 
 void stat_update(
-    struct batch_request *preq,
-    struct stat_cntl *cntl)
+    
+  struct batch_request *preq,
+  struct stat_cntl     *cntl)
+
   {
   job                  *pjob;
   struct batch_reply   *preply;
