@@ -42,6 +42,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       was the same as the queue where the job was already assigned.
   b - Fixed qsub -v option. Variable list was not getting passed in to job environment.
       TRQ-1128
+  b - fix array/queue deadlocks. Queues are now always locked before arrays. TRQ-1168.
 
 4.1.0
   e - make free_nodes() only look at nodes in the exec_host list and not examine
